--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-svelte": "^0.279.0",
     "mongodb": "^6.1.0"
   }
 }
