--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dev-showcase",
   "version": "0.0.1",
   "devDependencies": {
+    "@catppuccin/palette": "^0.2.0",
     "@catppuccin/tailwindcss": "^0.1.6",
     "@fontsource/fira-mono": "^4.5.10",
     "@melt-ui/pp": "^0.1.2",
@@ -40,8 +41,11 @@
   "dependencies": {
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.5.0",
+    "d3": "^7.8.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-svelte": "^0.279.0",
+    "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0"
   }
 }
