--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
+    "@types/d3": "^7.4.1",
+    "@types/jsonwebtoken": "^9.0.3",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "jsonwebtoken": "^9.0.2",
