--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/kit": "^1.20.4",
     "@types/cookie": "^0.5.1",
+    "@types/d3": "^7.4.1",
+    "@types/d3-cloud": "^1.2.0",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/qrcode": "^1.5.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
@@ -41,13 +45,13 @@
   "dependencies": {
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
-    "@types/d3": "^7.4.1",
-    "@types/jsonwebtoken": "^9.0.3",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
+    "d3-cloud": "^1.2.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "qrcode": "^1.5.3"
   }
 }
