--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@types/jsonwebtoken": "^9.0.3",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
-    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "8.5.1",
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0"
