--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@melt-ui/pp": "^0.1.2",
     "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@sveltejs/adapter-node": "^1.3.1",
     "@types/cookie": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@types/d3": "^7.4.1",
+    "@types/jsonwebtoken": "^9.0.3",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
@@ -41,12 +44,10 @@
   "dependencies": {
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
-    "@types/d3": "^7.4.1",
-    "@types/jsonwebtoken": "^9.0.3",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "9.0.2",
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0"
