--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "svelte-highlight": "^7.3.0"
   }
 }
