--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "@fontsource/fira-mono": "^4.5.10",
     "@melt-ui/pp": "^0.1.2",
     "@neoconfetti/svelte": "^1.0.0",
-    "@sveltejs/kit": "^1.20.4",
     "@sveltejs/adapter-node": "^1.3.1",
+    "@sveltejs/kit": "^1.20.4",
     "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@types/d3": "^7.4.1",
     "@types/jsonwebtoken": "^9.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "mdsvex": "^0.11.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
@@ -51,6 +52,7 @@
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0",
+    "shiki": "^0.14.4",
     "svelte-highlight": "^7.3.0"
   }
 }
