--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-mermaidjs": "^6.0.0",
+    "remark-toc": "^9.0.0",
+    "remark-unwrap-images": "^4.0.0",
     "shiki": "^0.14.4",
     "svelte-highlight": "^7.3.0"
   }
