--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
+    "rehype-katex-svelte": "^1.2.0",
+    "remark-math": "^2.0.1",
     "svelte": "^4.0.5",
     "svelte-adapter-bun": "^0.5.0",
     "svelte-check": "^3.4.3",
