--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "rehype-katex-svelte": "^1.2.0",
     "remark-math": "^2.0.1",
     "svelte": "^4.0.5",
-    "svelte-adapter-bun": "^0.5.0",
     "svelte-check": "^3.4.3",
     "svelte-sequential-preprocessor": "^2.0.1",
     "tailwindcss": "^3.3.2",
@@ -51,9 +50,17 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
-    "jsonwebtoken": "^9.0.2",
+    "d3-cloud": "^1.2.7",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "9.0.2",
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-mermaidjs": "^6.0.0",
+    "remark-toc": "^9.0.0",
+    "remark-unwrap-images": "^4.0.0",
+    "shiki": "^0.14.4",
+    "qrcode": "^1.5.3"
   }
 }
