--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-svelte": "^0.279.0",
     "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0",
+    "openai": "^4.12.1",
     "rehype-slug": "^6.0.0",
     "remark-mermaidjs": "^6.0.0",
     "remark-toc": "^9.0.0",
