--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
+    "@tensorflow/tfjs": "^4.11.0",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "d3-cloud": "^1.2.7",
@@ -57,11 +58,11 @@
     "mathlifier": "^1.3.4",
     "mongodb": "^6.1.0",
     "openai": "^4.12.1",
+    "qrcode": "^1.5.3",
     "rehype-slug": "^6.0.0",
     "remark-mermaidjs": "^6.0.0",
     "remark-toc": "^9.0.0",
     "remark-unwrap-images": "^4.0.0",
-    "shiki": "^0.14.4",
-    "qrcode": "^1.5.3"
+    "shiki": "^0.14.4"
   }
 }
