--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
     "@tensorflow/tfjs": "^4.11.0",
+    "@tensorflow/tfjs-vis": "^1.1.0",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "d3-cloud": "^1.2.7",
