--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "dev-showcase",
   "version": "0.0.1",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
   "devDependencies": {
     "@catppuccin/palette": "^0.2.0",
     "@catppuccin/tailwindcss": "^0.1.6",
@@ -33,23 +45,14 @@
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
-  },
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "vite": "^4.4.2",
+    "vitest": "^0.34.6"
   },
   "type": "module",
   "dependencies": {
     "@melt-ui/svelte": "^0.50.0",
     "@sendgrid/mail": "^7.7.0",
     "@tensorflow/tfjs": "^4.11.0",
-    "@tensorflow/tfjs-vis": "^1.1.0",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "d3-cloud": "^1.2.7",
