--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@melt-ui/pp": "^0.1.2",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/kit": "^1.30.3",
 		"@types/cookie": "^0.5.1",
 		"@types/d3": "^7.4.1",
 		"@types/d3-cloud": "^1.2.0",
