--- a/package.json
+++ b/package.json
@@ -46,10 +46,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.34.6"
-	},
-	"type": "module",
-	"dependencies": {
+		"vitest": "^0.34.6",
 		"@melt-ui/svelte": "^0.50.0",
 		"@sendgrid/mail": "^8.1.0",
 		"@tensorflow/tfjs": "^4.11.0",
@@ -60,13 +57,14 @@
 		"jsonwebtoken": "9.0.2",
 		"lucide-svelte": "^0.279.0",
 		"mathlifier": "^1.3.4",
-		"mongodb": "^6.1.0",
-		"openai": "^4.12.1",
 		"qrcode": "^1.5.3",
 		"rehype-slug": "^6.0.0",
 		"remark-mermaidjs": "^6.0.0",
 		"remark-toc": "^9.0.0",
 		"remark-unwrap-images": "^4.0.0",
 		"shiki": "^0.14.4"
+	},
+	"type": "module",
+	"dependencies": {
 	}
 }
