--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
 		"@catppuccin/tailwindcss": "^0.1.6",
 		"@fontsource/fira-mono": "^4.5.10",
 		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.50.0",
 		"@neoconfetti/svelte": "^1.0.0",
+		"@sendgrid/mail": "^8.1.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.30.3",
+		"@tensorflow/tfjs": "^4.11.0",
 		"@types/cookie": "^0.5.1",
 		"@types/d3": "^7.4.1",
 		"@types/d3-cloud": "^1.2.0",
@@ -29,16 +32,28 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
+		"axios": "^1.5.0",
+		"d3": "^7.8.5",
+		"d3-cloud": "^1.2.7",
+		"dotenv": "^16.3.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"lucide-svelte": "^0.279.0",
+		"mathlifier": "^1.3.4",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"qrcode": "^1.5.3",
 		"rehype-katex-svelte": "^1.2.0",
+		"rehype-slug": "^6.0.0",
 		"remark-math": "^2.0.1",
+		"remark-mermaidjs": "^6.0.0",
+		"remark-toc": "^9.0.0",
+		"remark-unwrap-images": "^4.0.0",
+		"shiki": "^0.14.4",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
@@ -46,25 +61,10 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.34.6",
-		"@melt-ui/svelte": "^0.50.0",
-		"@sendgrid/mail": "^8.1.0",
-		"@tensorflow/tfjs": "^4.11.0",
-		"axios": "^1.5.0",
-		"d3": "^7.8.5",
-		"d3-cloud": "^1.2.7",
-		"dotenv": "^16.3.1",
-		"jsonwebtoken": "9.0.2",
-		"lucide-svelte": "^0.279.0",
-		"mathlifier": "^1.3.4",
-		"qrcode": "^1.5.3",
-		"rehype-slug": "^6.0.0",
-		"remark-mermaidjs": "^6.0.0",
-		"remark-toc": "^9.0.0",
-		"remark-unwrap-images": "^4.0.0",
-		"shiki": "^0.14.4"
+		"vitest": "^0.34.6"
 	},
 	"type": "module",
 	"dependencies": {
+		"jwt-decode": "^4.0.0"
 	}
 }
