--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.34.6"
+		"vitest": "^0.34.6",
+		"@observablehq/plot": "^0.6.13",
+		"jwt-decode": "^4.0.0"
 	},
 	"type": "module",
-	"dependencies": {
-		"jwt-decode": "^4.0.0"
-	}
+	"dependencies": {}
 }
