--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"postbuild": "npx svelte-sitemap --domain https://dev.matheo-galuba.com",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -20,6 +21,7 @@
 		"@melt-ui/pp": "^0.1.2",
 		"@melt-ui/svelte": "^0.50.0",
 		"@neoconfetti/svelte": "^1.0.0",
+		"@observablehq/plot": "^0.6.13",
 		"@sendgrid/mail": "^8.1.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.30.3",
@@ -39,6 +41,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"jwt-decode": "^4.0.0",
 		"lucide-svelte": "^0.279.0",
 		"mathlifier": "^1.3.4",
 		"mdsvex": "^0.11.0",
@@ -57,14 +60,12 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
+		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.34.6",
-		"@observablehq/plot": "^0.6.13",
-		"jwt-decode": "^4.0.0"
+		"vitest": "^0.34.6"
 	},
-	"type": "module",
-	"dependencies": {}
+	"type": "module"
 }
