--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@catppuccin/palette": "^0.2.0",
 		"@catppuccin/tailwindcss": "^0.1.6",
+		"@ethercorps/sveltekit-og": "^3.0.0",
 		"@fontsource/fira-mono": "^4.5.10",
 		"@melt-ui/pp": "^0.1.2",
 		"@melt-ui/svelte": "^0.50.0",
@@ -41,6 +42,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"jszip": "^3.10.1",
 		"jwt-decode": "^4.0.0",
 		"lucide-svelte": "^0.279.0",
 		"mathlifier": "^1.3.4",
@@ -59,17 +61,14 @@
 		"shiki": "^0.14.4",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-file-dropzone": "^2.0.7",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.34.6",
-		"@ethercorps/sveltekit-og": "^3.0.0"
+		"vitest": "^0.34.6"
 	},
-	"type": "module",
-	"dependencies": {
-		"@ethercorps/sveltekit-og": "^3.0.0"
-	}
+	"type": "module"
 }
