🔀 API endoint with redirection to rembg container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,12 @@ services:
     depends_on:
       - db
 
+  rembg:
+    image: danielgatis/rembg:latest
+    restart: unless-stopped
+    command: ["s"]
+    ports:
+      - 7000:7000
+
 volumes:
   mongodata:
